--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -2,7 +2,17 @@
 @use "../abstracts/mixins" as mx;
 
 .navigation {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  background-color: white;
+  z-index: 100;
+  padding-block: 1rem;
+
   &__wrapper {
     display: flex;
     justify-content: space-between;
@@ -24,6 +34,7 @@
     background-color: black;
     height: 1px;
     position: absolute;
+    transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
   }
 
   &__empty-bar {
